[package]
name = "repr"
authors = ["Nick Webster <nick@nick.geek.nz>"]
license = "MPL-2.0"
description = "A library for representation invariants with caching and parallelism support."
repository = "https://github.com/NickGeek/repr-rs"
categories = ["caching", "concurrency"]
version = "0.1.0"
edition = "2021"
exclude = [
    ".idea"
]

[features]
eager = ["tokio", "crossbeam"]

[dependencies]
hashbrown = "0.15.1"
downcast-rs = "1.2.1"

# feature = eager
tokio = { version = "1.41.1", optional = true, features = ["rt", "sync"] }
crossbeam = { version = "0.8.4", optional = true }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }

[profile.test]
opt-level = 3
