[package]
name = "repr-rs"
authors = ["Nick Webster <nick@nick.geek.nz>"]
license = "MPL-2.0"
description = "A library for representation invariants with caching and parallelism support."
repository = "https://github.com/NickGeek/repr-rs"
categories = ["caching", "concurrency"]
version = "0.3.1"
edition = "2021"
exclude = [
    ".idea"
]

[features]
eager = ["tokio"]

[dependencies]
downcast-rs = "1.2.1"

# feature = eager
tokio = { version = "1.41.1", optional = true, features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }

[profile.test]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
